Fixed the issue where the logo was overlapping the searchbar.

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 
 .google-logo {
     position: relative;
-    top: 80px;
 }
 
 input[type="text"]{
